# IMXRT1052_for_fireboard

./: .cproject  .default_mex  .gitignore  .project  CMakeLists.txt  MIMXRT1052_Project LinkServer Debug.launch  MIMXRT1052_Project.mex  MIMXRT1052_Project_Demo LinkServer Debug.launch  MIMXRT1052_Project_Demo LinkServer Release.launch  MIMXRT1052_Project_Demo.mex  MIMXRT1052_Project_Demo_Debug.ld  MIMXRT1052_Project_Demo_Debug_library.ld  MIMXRT1052_Project_Demo_Debug_memory.ld
Debug/: MIMXRT1052_Project.axf  MIMXRT1052_Project.map  MIMXRT1052_Project_Debug.ld  MIMXRT1052_Project_Debug_library.ld  MIMXRT1052_Project_Debug_memory.ld  MIMXRT1052_Project_Debug_user.ld  MIMXRT1052_Project_Demo_Debug.ld  MIMXRT1052_Project_Demo_Debug_library.ld  MIMXRT1052_Project_Demo_Debug_memory.ld  MIMXRT1052xxxxB_part.xml  makefile
Debug/board/: board.d  board.su  clock_config.d  clock_config.su  dcd.d  pin_mux.d  pin_mux.su  subdir.mk
Debug/component/lists/: fsl_component_generic_list.d  fsl_component_generic_list.su  subdir.mk
Debug/component/serial_manager/: fsl_component_serial_manager.d  fsl_component_serial_manager.su  fsl_component_serial_port_uart.d  subdir.mk
Debug/component/uart/: fsl_adapter_lpuart.d  subdir.mk
Debug/device/: subdir.mk  system_MIMXRT1052.d
Debug/drivers/: fsl_clock.d  fsl_common.d  fsl_common_arm.d  fsl_gpio.d  fsl_lpuart.d  fsl_lpuart.su  subdir.mk
Debug/source/: MIMXRT1052_Project.d  MIMXRT1052_Project.su  subdir.mk
Debug/startup/: subdir.mk
Debug/utilities/: fsl_assert.d  fsl_assert.su  fsl_debug_console.d  fsl_str.d  subdir.mk
Debug/xip/: evkbimxrt1050_flexspi_nor_config.d  fire_imxrt1052_sdram_ini_dcd.d  fsl_flexspi_nor_boot.d  subdir.mk
Release/: MIMXRT1052_Project_Demo_Release.ld  MIMXRT1052_Project_Demo_Release_library.ld  MIMXRT1052_Project_Demo_Release_memory.ld
board/: board.c  board.h  clock_config.c  clock_config.h  dcd.c  dcd.h  peripherals.c  peripherals.h  pin_mux.c  pin_mux.h
component/gpio/: fsl_adapter_igpio.c
component/led/: fsl_component_led.c
component/log/: fsl_component_log_config.h
component/serial_manager/: fsl_component_serial_manager.h
component/uart/: fsl_adapter_lpuart.c
device/: MIMXRT1052_features.h
fatfs/source/: diskio.c  diskio.h
fatfs/source/fsl_nor_disk/: fsl_nor_disk.c  fsl_nor_disk.h
fatfs/source/fsl_sd_disk/: fsl_sd_disk.c
littlefs/: lfs_config.h  lfs_port.c  lfs_util.c
lwip/port/: enet_ethernetif.c  enet_ethernetif.h  ping_test.c  sys_arch.c  tcp_test.c  udp_test.c
lwip/port/arch/: cc.h
lwip/src/include/lwip/: arch.h  opt.h
lwip/template/: lwipopts.h
nand_flash/: fsl_semc_nand_flash.h
sdmmc/template/usdhc/: sdmmc_config.c  sdmmc_config.h
source/: MIMXRT1052_Project.c  MIMXRT1052_Project_Demo.c  bsp_adc.c  bsp_adc.h  bsp_can.c  bsp_can.h  bsp_gpt.c  bsp_gpt.h  bsp_i2c_eeprom.c  bsp_i2c_eeprom.h  bsp_key.c  bsp_key.h  bsp_led.h  bsp_nand.c  bsp_nand.h  bsp_norflash.c  bsp_norflash.h  bsp_norflash_test.c  bsp_nvic.c  bsp_nvic.h  bsp_pit.c  bsp_pit.h  bsp_qtmr.c  bsp_qtmr.h  bsp_sd.c  bsp_sd.h  bsp_sd_fatfs_test.c  bsp_sd_fatfs_test.h  bsp_sdram.c  bsp_sdram.h  bsp_snvs_hp_rtc.c  bsp_snvs_hp_rtc.h  bsp_systick.c  bsp_systick.h  ffconf.h  nand_flash_test.c  norflash_partition.h  sdram_test.c  syscall.c
source/EasyFlash-master/easyflash/inc/: ef_cfg.h
source/EasyFlash-master/easyflash/port/: ef_port.c
source/EasyFlash-master/easyflash/src/: ef_env.c
source/bsp/: bsp_button.c  bsp_button.h  bsp_eeprom.c  bsp_eeprom.h  bsp_led.c  bsp_led.h  bsp_norflash.c  bsp_norflash.h  bsp_phy.c  bsp_phy.h  bsp_trng.c  bsp_trng.h  os_schedule.c  os_schedule.h
source/cm_backtrace/: cm_backtrace.c  cmb_cfg.h  cmb_def.h  fault_test.c
source/coremark/: core_portme.c  core_portme.h  coremark.h
source/easylogger/inc/: elog.h
source/easylogger/port/: elog_port.c
source/freertos/: tasks.c
source/freertos/include/: FreeRTOSConfig.h
source/letter-shell/src/: shell_cfg.h  shell_cfg_user.h  shell_port.c  shell_port.h
source/lwrb/: lwrb_test.c
source/openblt/Host/Source/BootCommander/: main.c
source/openblt/Host/Source/LibOpenBLT/: openblt.c  openblt.h
source/openblt/Host/Source/LibOpenBLT/bindings/csharp/: openblt.cs
source/openblt/Host/Source/LibOpenBLT/bindings/pascal/: openblt.pas
source/openblt/Host/Source/LibOpenBLT/bindings/python/openblt/: lib.py
source/openblt/Host/Source/MicroBoot/: firmwareupdate.pas
source/perf_counter/: perf_counter.c  perf_counter.h
source/uip/: uip.h  uipopt.h
source/uip/port/: clock-arch.c  clock-arch.h  tapdev.c  tapdev.h  uip-conf.h
startup/: startup_mimxrt1052.c
utilities/: fsl_debug_console.c  fsl_debug_console_conf.h  jump_app.S  systick_utils.c  systick_utils.h
xip/: evkbimxrt1050_flexspi_nor_config.c  fire_imxrt1052_sdram_ini_dcd.c  fsl_flexspi_nor_boot.h
